# HelixServe

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
bench/: run_benchmark.py  run_live_suite.py  workload.py
cache/: allocator.py  prefix_cache.py
cuda_ext/: __init__.py  cu_seqlens.py
cuda_ext/csrc/: cu_seqlens.cpp  cu_seqlens_kernel.cu
deploy/: Dockerfile  deploy_to_gcp_vm.sh  gcp_create_g2_l4.sh  run_server.sh  setup_idle_shutdown_on_vm.sh
docs/: architecture.md  benchmark_report_template.md  weekly_task_board.md
docs/assets/demo/: manifest.json
docs/reports/: gcp_l4_live_report_2026-04-06.md
docs/results/20260406T110454Z/: burst.json  long.json  mixed.json  repeated_prefix.json  short.json  stats_after.json  stats_before.json
docs/results/20260406T110729Z/: burst.json  long.json  mixed.json  repeated_prefix.json  short.json  stats_after.json  suite.json  (+1 more)
engine/: config.py  cuda_graph.py  request.py  runtime.py  scheduler.py
kernels/: benchmark_rmsnorm.py  rmsnorm_triton.py
metrics/: registry.py
model/: backend.py  factory.py  hf_backend.py  tokenizer.py  toy_backend.py
profiling/: ncu_cu_seqlens.sh  ncu_rmsnorm.sh  nsys_decode_capture.sh
scripts/: bootstrap.sh  build_final_demo_video.py  check_product_voiceover.py  generate_demo_assets.py  profile_cu_seqlens.py  profile_decode.py  profile_rmsnorm.py  run_phase_bench_gcp.py  verify_final_video.py
server/: main.py
tests/: conftest.py  test_allocator.py  test_cuda_ext.py  test_engine_scheduler.py  test_prefix_cache.py  test_server.py  test_triton_kernel.py
(+18 files in other folders)
